<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin"
            tools:context=".EditorActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_name" />

                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_price" />

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_quantity" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0">

                        <EditText
                            android:id="@+id/edit_step"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_step"
                            android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0">

                        <Button
                            android:id="@+id/minus_button"
                            style="@style/EditorButtonStyle"
                            android:text="-" />

                        <TextView
                            android:id="@+id/edit_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:text="0" />

                        <Button
                            android:id="@+id/plus_button"
                            style="@style/EditorButtonStyle"
                            android:text="+" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_supplier" />

                <EditText
                    android:id="@+id/edit_supplier"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier" />
            </LinearLayout>

            <ImageView
                android:id="@+id/product_picture"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />

<Button
    android:id="@+id/add_picture_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Add picture"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>